# bottle-flip-jam-demo

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yaml
src/: main.rs
src/aerobat/: components.rs  mod.rs  resources.rs  systems.rs
src/backgrounds/: mod.rs  systems.rs
src/bottle/: components.rs  mod.rs  resources.rs  systems.rs
src/camera/: components.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/collectables/: components.rs  mod.rs  systems.rs
src/config/: mod.rs
src/free_hand_controller/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/game_options_menu/: components.rs  mod.rs  systems.rs
src/grabber/: components.rs  mod.rs  systems.rs
src/level/: mod.rs  systems.rs
src/level_editor/: components.rs  mod.rs  systems.rs
src/levels/: mod.rs  systems.rs
src/main_menu/: mod.rs  systems.rs
src/physics/: mod.rs
src/progression/: components.rs  mod.rs  resources.rs  states.rs  systems.rs
src/score/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/soundtrack/: components.rs  mod.rs  resources.rs  systems.rs
wasm/: index.html
